--- a/branch/find-tutors.html
+++ b/branch/find-tutors.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/find-tutors.css">
+    <link rel="stylesheet" href="../css/auth-modal.css">
     <link rel="stylesheet" href="../css/profile-system.css"> <!-- Profile system CSS -->
+<link rel="stylesheet" href="../css/coming-soon-modal.css">
 </head>
 
 <body class="bg-gray-100 dark:bg-gray-900 transition-colors duration-300">
@@ -54,62 +56,70 @@
 
                 <!-- Right Section: Navigation Links -->
                 <div class="nav-links hidden md:flex">
-                    <a class="nav-link px-2 py-1 rounded" href="#">
-                        <span class="nav-icon">📰</span> News
-                    </a>
-                    <a class="nav-link px-2 py-1 rounded" href="#" onclick="handleNavLinkClick(event, 'store')">
-                        <span class="nav-icon">📚</span> Bookstore
-                    </a>
-                    <a class="nav-link px-2 py-1 rounded" href="reels.html"
-                        onclick="handleNavLinkClick(event, 'reels')">
-                        <span class="nav-icon">🎬</span> Reels
-                    </a>
-                    <a class="nav-link px-2 py-1 rounded" href="#" onclick="handleNavLinkClick(event, 'find-jobs')">
-                        <span class="nav-icon">💼</span> Find a Job
-                    </a>
+                    <div class="nav-items">
+                        <a class="nav-link px-2 py-1 rounded" href="#" onclick="handleNavLinkClick(event, 'news')">
+                            <span class="nav-icon">📰</span> News
+                        </a>
+
+                        <a class="nav-link px-2 py-1 rounded" href="reels.html"
+                            onclick="handleNavLinkClick(event, 'reels')">
+                            <span class="nav-icon">🎬</span> Reels
+                        </a>
+                        <a class="nav-link px-2 py-1 rounded" href="#" onclick="handleNavLinkClick(event, 'store')">
+                            <span class="nav-icon">📚</span> Bookstore
+                        </a>
+                        <a class="nav-link px-2 py-1 rounded" href="#" onclick="handleNavLinkClick(event, 'find-jobs')">
+                            <span class="nav-icon">💼</span> Find a Job
+                        </a>
+                    </div>
 
                     <!-- Profile container in navigation -->
-<div id="profile-container" class="profile-dropdown-container hidden">
-    <button id="profile-dropdown-toggle" class="profile-dropdown-toggle" onclick="toggleProfileDropdown()">
-        <img id="profile-pic" class="profile-pic" alt="Profile">
-        <span id="profile-name" class="profile-name"></span>
-        <svg class="dropdown-arrow" width="12" height="12" fill="currentColor" viewBox="0 0 20 20">
-            <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path>
-        </svg>
-    </button>
+                    <div id="profile-container" class="profile-dropdown-container hidden">
+                        <button id="profile-dropdown-toggle" class="profile-dropdown-toggle"
+                            onclick="toggleProfileDropdown()">
+                            <img id="profile-pic" class="profile-pic" alt="Profile">
+                            <span id="profile-name" class="profile-name"></span>
+                            <svg class="dropdown-arrow" width="12" height="12" fill="currentColor" viewBox="0 0 20 20">
+                                <path fill-rule="evenodd"
+                                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                                    clip-rule="evenodd"></path>
+                            </svg>
+                        </button>
 
-    <div id="profile-dropdown-menu" class="profile-dropdown-menu hidden">
-        <!-- User info header -->
-        <div class="dropdown-header">
-            <img id="dropdown-profile-pic" class="dropdown-profile-pic" alt="Profile">
-            <div class="dropdown-user-info">
-                <span id="dropdown-user-name" class="dropdown-user-name"></span>
-                <span id="dropdown-user-email" class="dropdown-user-email"></span>
-                <span id="dropdown-user-role" class="dropdown-user-role"></span>
-            </div>
-        </div>
+                        <div id="profile-dropdown-menu" class="profile-dropdown-menu hidden">
+                            <!-- User info header -->
+                            <div class="dropdown-header">
+                                <img id="dropdown-profile-pic" class="dropdown-profile-pic" alt="Profile">
+                                <div class="dropdown-user-info">
+                                    <span id="dropdown-user-name" class="dropdown-user-name"></span>
+                                    <span id="dropdown-user-email" class="dropdown-user-email"></span>
+                                    <span id="dropdown-user-role" class="dropdown-user-role"></span>
+                                </div>
+                            </div>
 
-        <div class="dropdown-divider"></div>
+                            <div class="dropdown-divider"></div>
 
-        <!-- Role switcher section -->
-        <div id="role-switcher-section" class="role-switcher-section hidden">
-            <div class="dropdown-divider"></div>
-            <div class="dropdown-item-header">Switch Role</div>
-            <div id="role-options" class="role-options">
-                <!-- Role options will be dynamically added -->
-            </div>
-        </div>
+                            <!-- Role switcher section -->
+                            <div id="role-switcher-section" class="role-switcher-section hidden">
+                                <div class="dropdown-divider"></div>
+                                <div class="dropdown-item-header">Switch Role</div>
+                                <div id="role-options" class="role-options">
+                                    <!-- Role options will be dynamically added -->
+                                </div>
+                            </div>
 
-        <div class="dropdown-divider"></div>
+                            <div class="dropdown-divider"></div>
 
-        <button class="dropdown-item logout-item" onclick="logout()">
-            <svg class="dropdown-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"></path>
-            </svg>
-            Logout
-        </button>
-    </div>
-</div>
+                            <button class="dropdown-item logout-item" onclick="logout()">
+                                <svg class="dropdown-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1">
+                                    </path>
+                                </svg>
+                                Logout
+                            </button>
+                        </div>
+                    </div>
                     <button id="notificationBtn" aria-label="Notifications"
                         class="notification-btn relative p-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
                         <span class="notification-icon">🔔</span>
@@ -538,32 +548,57 @@
             </form>
         </div>
     </div>
-<!-- Enhanced Auth Modal -->
-<div id="authRequiredModal" class="auth-modal-overlay">
-    <div class="auth-modal-container">
-        <div class="auth-modal-content">
-            <div class="auth-modal-icon">
-                <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
-                        d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z">
-                    </path>
-                </svg>
-            </div>
-            <h2 class="auth-modal-title">Authentication Required</h2>
-            <p class="auth-modal-message" id="authModalMessage">
-                Please login to access this page. You'll be redirected to the login page to continue.
-            </p>
-            <div class="auth-modal-buttons">
-                <button class="auth-modal-btn primary" onclick="redirectToLogin()">
-                    Login Now
-                </button>
-                <button class="auth-modal-btn secondary" onclick="goBack()">
-                    Go Back
-                </button>
+    <!-- Enhanced Auth Modal -->
+    <div id="authRequiredModal" class="auth-modal-overlay">
+        <div class="auth-modal-container">
+            <div class="auth-modal-content">
+                <div class="auth-modal-icon">
+                    <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z">
+                        </path>
+                    </svg>
+                </div>
+                <h2 class="auth-modal-title">Authentication Required</h2>
+                <p class="auth-modal-message" id="authModalMessage">
+                    Please login to access this page. You'll be redirected to the login page to continue.
+                </p>
+                <div class="auth-modal-buttons">
+                    <button class="auth-modal-btn primary" onclick="redirectToLogin()">
+                        Login Now
+                    </button>
+                    <button class="auth-modal-btn secondary" onclick="goBack()">
+                        Go Back
+                    </button>
+                </div>
             </div>
         </div>
     </div>
+
+    <!-- Coming Soon Modal -->
+<div id="coming-soon-modal" class="modal">
+    <div class="modal-content enhanced coming-soon-content">
+        <button class="modal-close-enhanced" onclick="closeModal('coming-soon-modal')">
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12">
+                </path>
+            </svg>
+        </button>
+        
+        <div class="coming-soon-header">
+            <div class="coming-soon-icon">
+                <svg class="w-16 h-16" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
+                        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z">
+                    </path>
+                </svg>
+            </div>
+            <h3 class="modal-title">Coming Soon!</h3>
+            <p class="modal-subtitle" id="coming-soon-message">We're working hard to bring you this feature. Stay tuned!</p>
+        </div>
+    </div>
 </div>
+
     <!-- Enhanced Footer -->
     <footer class="footer-section" id="footer" role="contentinfo">
         <div class="footer-wave" aria-hidden="true">
@@ -865,7 +900,7 @@
     </script>
     <!-- Authentication Scripts -->
     <script src="../js/auth.js"></script>
-    <script>
+<script>
         // Check authentication on page load
         (async function () {
             const auth = window.AuthManager;
@@ -874,8 +909,8 @@
             if (!auth.isAuthenticated()) {
                 const restored = await auth.restoreSession();
                 if (!restored) {
-                    alert('Please login to find tutors');
-                    window.location.href = '../index.html';
+                    // Show enhanced modal instead of alert
+                    showAuthModal();
                     return;
                 }
             }
@@ -884,13 +919,14 @@
             const user = auth.getUser();
             const userRole = auth.getUserRole();
 
-            // Find Tutors is accessible to all authenticated users
+            // Reels is accessible to all authenticated users
+            // No role-specific check needed
             console.log('User authenticated:', user.email);
             console.log('User role:', userRole);
 
             // Update UI with user info
             if (user) {
-                // Update profile elements
+                // Update profile elements if they exist
                 const profilePic = document.getElementById('profile-pic');
                 const profileName = document.getElementById('profile-name');
                 const dropdownProfilePic = document.getElementById('dropdown-profile-pic');
@@ -924,7 +960,7 @@
                 }
             }
 
-            console.log('Access granted to Find Tutors page');
+            console.log('Access granted to Reels page');
         })();
 
         // Logout function
@@ -941,6 +977,41 @@
             }
         }
 
+        // Show authentication modal
+        function showAuthModal() {
+            const modal = document.getElementById('authRequiredModal');
+            const message = document.getElementById('authModalMessage');
+
+            // Customize message based on page
+            const pageMessages = {
+                'reels': 'Login to access Reels and watch amazing educational videos.',
+                'find-tutors': 'Login to find the perfect tutors for your learning journey.',
+                'advertiser-profile': 'Login to access advertiser features and campaigns.',
+                'view-parent': 'Login to view parent profiles and engagement details.'
+            };
+
+            // Get current page type from URL or page identifier
+            const currentPage = window.location.pathname.split('/').pop().replace('.html', '');
+
+            if (pageMessages[currentPage]) {
+                message.textContent = pageMessages[currentPage];
+            }
+
+            modal.classList.add('active');
+        }
+
+        // Redirect to login
+        function redirectToLogin() {
+            // Store the intended destination
+            localStorage.setItem('redirectAfterLogin', window.location.href);
+            window.location.href = '../index.html';
+        }
+
+        // Go back to previous page
+        function goBack() {
+            window.history.back();
+        }
+
         // Close dropdown when clicking outside
         document.addEventListener('click', function (event) {
             const profileContainer = document.getElementById('profile-container');
@@ -951,8 +1022,10 @@
             }
         });
     </script>
-<script src="../js/profile-system.js"></script> <!-- Profile system JS -->
+
+    <script src="../js/profile-system.js"></script> <!-- Profile system JS -->
     <script src="../js/find-tutors.js"></script>
+<script src="../js/coming-soon-modal.js"></script>
 </body>
 
 </html>
