--- a/branch/reels.html
+++ b/branch/reels.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../css/auth-modal.css">
     <link href="../css/videoplayer.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/profile-system.css"> <!-- Profile system CSS -->
+    <link rel="stylesheet" href="../css/coming-soon-modal.css">
 </head>
 
 <body class="font-sans">
@@ -45,7 +46,8 @@
 
             <!-- Right Section: Navigation Links -->
             <div class="nav-links hidden md:flex">
-                <a class="nav-link px-2 py-1 rounded" href="#">
+                <div class="nav-items">
+                <a class="nav-link px-2 py-1 rounded" href="#" onclick="handleNavLinkClick(event, 'news')">
                     <span class="nav-icon">📰</span> News
                 </a>
                 <a class="nav-link px-2 py-1 rounded" href="find-tutors.html"
@@ -58,49 +60,54 @@
                 <a class="nav-link px-2 py-1 rounded" href="#" onclick="handleNavLinkClick(event, 'find-jobs')">
                     <span class="nav-icon">💼</span> Find a Job
                 </a>
-
-                    <!-- Profile container in navigation -->
-<div id="profile-container" class="profile-dropdown-container hidden">
-    <button id="profile-dropdown-toggle" class="profile-dropdown-toggle" onclick="toggleProfileDropdown()">
-        <img id="profile-pic" class="profile-pic" alt="Profile">
-        <span id="profile-name" class="profile-name"></span>
-        <svg class="dropdown-arrow" width="12" height="12" fill="currentColor" viewBox="0 0 20 20">
-            <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path>
-        </svg>
-    </button>
-
-    <div id="profile-dropdown-menu" class="profile-dropdown-menu hidden">
-        <!-- User info header -->
-        <div class="dropdown-header">
-            <img id="dropdown-profile-pic" class="dropdown-profile-pic" alt="Profile">
-            <div class="dropdown-user-info">
-                <span id="dropdown-user-name" class="dropdown-user-name"></span>
-                <span id="dropdown-user-email" class="dropdown-user-email"></span>
-                <span id="dropdown-user-role" class="dropdown-user-role"></span>
             </div>
-        </div>
+                <!-- Profile container in navigation -->
+                <div id="profile-container" class="profile-dropdown-container hidden">
+                    <button id="profile-dropdown-toggle" class="profile-dropdown-toggle"
+                        onclick="toggleProfileDropdown()">
+                        <img id="profile-pic" class="profile-pic" alt="Profile">
+                        <span id="profile-name" class="profile-name"></span>
+                        <svg class="dropdown-arrow" width="12" height="12" fill="currentColor" viewBox="0 0 20 20">
+                            <path fill-rule="evenodd"
+                                d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                                clip-rule="evenodd"></path>
+                        </svg>
+                    </button>
 
-        <div class="dropdown-divider"></div>
+                    <div id="profile-dropdown-menu" class="profile-dropdown-menu hidden">
+                        <!-- User info header -->
+                        <div class="dropdown-header">
+                            <img id="dropdown-profile-pic" class="dropdown-profile-pic" alt="Profile">
+                            <div class="dropdown-user-info">
+                                <span id="dropdown-user-name" class="dropdown-user-name"></span>
+                                <span id="dropdown-user-email" class="dropdown-user-email"></span>
+                                <span id="dropdown-user-role" class="dropdown-user-role"></span>
+                            </div>
+                        </div>
 
-        <!-- Role switcher section -->
-        <div id="role-switcher-section" class="role-switcher-section hidden">
-            <div class="dropdown-divider"></div>
-            <div class="dropdown-item-header">Switch Role</div>
-            <div id="role-options" class="role-options">
-                <!-- Role options will be dynamically added -->
-            </div>
-        </div>
+                        <div class="dropdown-divider"></div>
 
-        <div class="dropdown-divider"></div>
+                        <!-- Role switcher section -->
+                        <div id="role-switcher-section" class="role-switcher-section hidden">
+                            <div class="dropdown-divider"></div>
+                            <div class="dropdown-item-header">Switch Role</div>
+                            <div id="role-options" class="role-options">
+                                <!-- Role options will be dynamically added -->
+                            </div>
+                        </div>
 
-        <button class="dropdown-item logout-item" onclick="logout()">
-            <svg class="dropdown-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"></path>
-            </svg>
-            Logout
-        </button>
-    </div>
-</div>
+                        <div class="dropdown-divider"></div>
+
+                        <button class="dropdown-item logout-item" onclick="logout()">
+                            <svg class="dropdown-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1">
+                                </path>
+                            </svg>
+                            Logout
+                        </button>
+                    </div>
+                </div>
 
                 <button id="notification-bell" class="relative p-2 rounded-full hover-glow transition-all duration-300"
                     onclick="openNotificationModal()" aria-label="View notifications">
@@ -693,6 +700,30 @@
         <!-- Fullscreen Transition -->
         <div class="fullscreen-transition" id="fullscreenTransition"></div>
     </div>
+    <!-- Coming Soon Modal -->
+<div id="coming-soon-modal" class="modal">
+    <div class="modal-content enhanced coming-soon-content">
+        <button class="modal-close-enhanced" onclick="closeModal('coming-soon-modal')">
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12">
+                </path>
+            </svg>
+        </button>
+        
+        <div class="coming-soon-header">
+            <div class="coming-soon-icon">
+                <svg class="w-16 h-16" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
+                        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z">
+                    </path>
+                </svg>
+            </div>
+            <h3 class="modal-title">Coming Soon!</h3>
+            <p class="modal-subtitle" id="coming-soon-message">We're working hard to bring you this feature. Stay tuned!</p>
+        </div>
+    </div>
+</div>
+
     <!-- Enhanced Footer -->
     <footer class="footer-section" id="footer" role="contentinfo">
         <div class="footer-wave" aria-hidden="true">
@@ -1117,10 +1148,13 @@
             }
         });
     </script>
+    <script src="../js/profile-system.js"></script> <!-- Profile system JS -->
+    
     <script src="../js/reels.js"></script>
-    <script src="../js/reels-player-bridge.js"></script>
     <script src="../js/videoplayer.js"></script>
-<script src="../js/profile-system.js"></script> <!-- Profile system JS -->
+    <script src="../js/player-bridge.js"></script>
+    <script src="../js/video-player-integration.js"></script>   
+<script src="../js/coming-soon-modal.js"></script>
 </body>
 
 </html>
